fix #11: display list of connected users

--- a/view/index.html
+++ b/view/index.html
@@ -16,6 +16,10 @@
 	  <button onclick="send()">Send</button>
     </section>
 
+    <aside id="connected">
+
+    </aside>
+
   <section id="chat_zone">
 
   </section>
