--- a/view/index.html
+++ b/view/index.html
@@ -5,6 +5,8 @@
     <title>Chat</title>
     <link rel="stylesheet" href="./style.css">
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+	<script src="./lib/linkify.min.js"></script>
+	<script src="./lib/linkify-jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="./script.js"></script>
   </head>
