--- a/view/index.html
+++ b/view/index.html
@@ -10,7 +10,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="./script.js"></script>
   </head>
-  <body>
+  <body onfocus="focus()">
     <h1>nodejs-chat</h1>
 
     <section id="chat_form">
