test jenkins integration

--- a/view/index.html
+++ b/view/index.html
@@ -11,7 +11,7 @@
     <script src="./script.js"></script>
   </head>
   <body onfocus="focus()">
-    <h1>VG's chat</h1>
+    <h1>nodejs-chat</h1>
 
     <section id="chat_form">
       <input type="text" name="message" id="message" placeholder="Type your message here..." size="50" autofocus onkeydown="pressKey(event)"/>
