--- a/view/index.html
+++ b/view/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Chat</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/style.css">
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-	<script src="./lib/linkify.min.js"></script>
-	<script src="./lib/linkify-jquery.min.js"></script>
+    <script src="/lib/linkify.min.js"></script>
+    <script src="/lib/linkify-jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="./script.js"></script>
+    <script src="/script.js"></script>
   </head>
   <body onfocus="focus()">
     <h1>nodejs-chat</h1>
 
     <section id="chat_form">
       <input type="text" name="message" id="message" placeholder="Type your message here..." size="50" autofocus onkeydown="pressKey(event)"/>
-	  <button onclick="send()">Send</button>
+    <button onclick="send()">Send</button>
     </section>
 
     <aside id="connected">
