--- a/view/index.html
+++ b/view/index.html
@@ -12,7 +12,7 @@
   </head>
   <body onfocus="focus()">
     <h1>nodejs-chat</h1>
-
+    <p>You have an account? Click <a href="/login">here</a> to login.</p>
     <section id="chat_form">
       <input type="text" name="message" id="message" placeholder="Type your message here..." size="50" autofocus onkeydown="pressKey(event)"/>
     <button onclick="send()">Send</button>
