nickname in page, change nickname, login disappears once logged in

--- a/view/index.html
+++ b/view/index.html
@@ -8,11 +8,11 @@
     <script src="/lib/linkify.min.js"></script>
     <script src="/lib/linkify-jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/script.js"></script>
   </head>
   <body onfocus="focus()">
     <h1>nodejs-chat</h1>
-    <p>You have an account? Click <a href="/login">here</a> to login.</p>
+    <p>You are <b><span id="nickname">client-x</span></b>.Click <a href="/" onclick="sessionStorage.clear()">here</a> to change nickname</p>
+    <p id="login_button">You have an account? Click <a href="/login">here</a> to login.</p>
     <section id="chat_form">
       <input type="text" name="message" id="message" placeholder="Type your message here..." size="50" autofocus onkeydown="pressKey(event)"/>
     <button onclick="send()">Send</button>
@@ -22,8 +22,9 @@
 
     </aside>
 
-  <section id="chat_zone">
+    <section id="chat_zone">
 
-  </section>
+    </section>
+    <script src="/script.js"></script>
   </body>
 </html>
