login on enter key

--- a/view/login.html
+++ b/view/login.html
@@ -9,7 +9,7 @@
 <body>
   <section id="login_form">
     <label for="nickname">nickname</label><input id="nickname" type="text"><br>
-    <label for="password">password</label><input id="password" type="text"><br>
+    <label for="password">password</label><input id="password" type="text" onkeydown="pressKey(event)"><br>
     <button onclick="login()">login</button>
   </section>
 </body>
