--- a/view/login.html
+++ b/view/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <section id="login_form">
-    <label for="nickname">nickname</label><input id="nickname" type="text"><br>
+    <label for="nickname">nickname</label><input id="nickname" type="text" autofocus><br>
     <label for="password">password</label><input id="password" type="text" onkeydown="pressKey(event)"><br>
     <button onclick="login()">login</button>
   </section>
