--- a/view/index.html
+++ b/view/index.html
@@ -7,6 +7,7 @@
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="/lib/linkify.min.js"></script>
     <script src="/lib/linkify-jquery.min.js"></script>
+    <script src="/lib/openpgp.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
   </head>
   <body onfocus="focus()">
