--- a/view/index.html
+++ b/view/index.html
@@ -17,7 +17,8 @@
 	<p class="keyarea" hidden><button id="genkey" onclick="genKey()">Generate key</button></p>
     <section id="chat_form">
       <input type="text" name="message" id="message" placeholder="Type your message here..." size="50" autofocus onkeydown="pressKey(event)"/>
-    <button onclick="send()">Send</button>
+	  <b> [to <span id="dest">all</span>] </b>
+      <button onclick="send()">Send</button>
     </section>
 
     <aside id="connected">
