--- a/public/style.css
+++ b/public/style.css
@@ -18,6 +18,10 @@ aside {
 	text-decoration: underline
 }
 
+#dest:hover {
+	text-decoration: underline
+}
+
 #chat_zone strong {
 	color: white;
 	background-color: black;
