--- a/view/index.html
+++ b/view/index.html
@@ -9,6 +9,7 @@
     <script src="/lib/linkify-jquery.min.js"></script>
     <script src="/lib/openpgp.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+	<link href="/img/favicon.ico" rel="icon" type="image/x-icon"/>
   </head>
   <body onfocus="focus()">
     <h1>nodejs-chat <img src="/img/keyko.png" id="key" class="keyarea" hidden onclick="showkey()"></h1>
