--- a/view/index.html
+++ b/view/index.html
@@ -13,6 +13,7 @@
   </head>
   <body onfocus="focus()">
     <h1>nodejs-chat <img src="/img/keyko.png" id="key" class="keyarea" hidden onclick="showkey()"></h1>
+    TEST
     <p>You are <b><span id="nickname">client-x</span></b>. Click <a href="/" onclick="sessionStorage.clear()">here</a> to change nickname</p>
     <p id="login_button">You have an account? Click <a href="/login">here</a> to login.</p>
 	  <p class="keyarea" hidden><button id="genkey" onclick="genKey()">Generate key</button></p>
