start working on tutorial

--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,17 @@ aside {
 	color: #00008B
 }
 
+#help {
+	float: none;
+	color: darkblue;
+}
+
+#help h3:hover {
+	color: red;
+	text-decoration: underline;
+	cursor: pointer;
+}
+
 #connected {
 	color: green
 }
