--- a/view/index.html
+++ b/view/index.html
@@ -12,10 +12,14 @@
     <link href="/img/favicon.ico" rel="icon" type="image/x-icon"/>
   </head>
   <body onfocus="focus()">
+
     <h1>nodejs-chat <img src="/img/keyko.png" id="key" class="keyarea" hidden onclick="showkey()"></h1>
     <p>You are <b><span id="nickname">client-x</span></b>. Click <a href="/" onclick="sessionStorage.clear()">here</a> to change nickname</p>
     <p id="login_button">You have an account? Click <a href="/login">here</a> to login.</p>
 	  <p class="keyarea" hidden><button id="genkey" onclick="genKey()">Generate key</button></p>
+    <aside id="help">
+      <h3 onclick="help()">Need help?</h3>
+    </aside>
     <section id="chat_form">
       <input type="text" name="message" id="message" placeholder="Type your message here..." size="50" autofocus onkeydown="pressKey(event)" oninput="inputChange()" onfocus="inputChange()"/>
 	    <b> [to <span id="dest" onclick="selectConnected('all')">all</span>] </b>
