--- a/view/index.html
+++ b/view/index.html
@@ -16,7 +16,7 @@
     <h1>nodejs-chat <img src="/img/keyko.png" id="key" class="keyarea" hidden onclick="showkey()"></h1>
     <p>You are <b><span id="nickname">client-x</span></b>. Click <a href="/" onclick="sessionStorage.clear()">here</a> to change nickname</p>
     <p id="login_button">You have an account? Click <a href="/login">here</a> to login.</p>
-	  <p class="keyarea" hidden><button id="genkey" onclick="genKey()">Generate key</button></p>
+	  <p class="keyarea" hidden><button id="genkey" onclick="genKey()">Generate key</button><button onclick="genKeyNode()">Get key from local server</button> <span id="wait_please" hidden>Request sent; please wait while your key is being generated...<span></p>
     <aside id="help">
       <h3 onclick="help()">Need help?</h3>
     </aside>
