--- a/view/index.html
+++ b/view/index.html
@@ -14,16 +14,20 @@
   <body onfocus="focus()">
 
     <h1>nodejs-chat <img src="/img/keyko.png" id="key" class="keyarea" hidden onclick="showkey()"></h1>
-    <p>You are <b><span id="nickname">client-x</span></b>. Click <a href="/" onclick="sessionStorage.clear()">here</a> to change nickname</p>
-    <p id="login_button">You have an account? Click <a href="/login">here</a> to login.</p>
-	  <p class="keyarea" hidden><button id="genkey" onclick="genKey()">Generate key</button><button onclick="genKeyNode()">Get key from local server</button> <span id="wait_please" hidden>Request sent; please wait while your key is being generated...</span><span id="gen_error" hidden>An error occurred during key generation!</span> </p>
+    <p>You are <b><span id="nickname">client-x</span></b>.<br>
+    <a href="/login">Change nickname, login, or activate advanced features</a>.</p>
+    <p class="keyarea" hidden>
+      <button id="genkey" onclick="genKey()">Generate key</button>
+      <button onclick="genKeyNode()">Get key from local server</button>
+      <button onclick="deleteKey()">Delete key</button> <span id="wait_please" hidden>Request sent; please wait while your key is being generated...</span><span id="gen_error" hidden>An error occurred during key generation!</span>
+    </p>
     <aside id="help">
       <h3 onclick="help()">Need help?</h3>
     </aside>
     <section id="chat_form">
       <input type="text" name="message" id="message" placeholder="Type your message here..." size="50" autofocus onkeydown="pressKey(event)" oninput="inputChange()" onfocus="inputChange()"/>
-	    <b> [to <span id="dest" onclick="selectConnected('all')">all</span>] </b>
-	    <img id="send_secured" class="keyarea" hidden src="/img/unsecured.png">
+        <b> [to <span id="dest" onclick="selectConnected('all')">all</span>] </b>
+        <img id="send_secured" class="keyarea" hidden src="/img/unsecured.png">
       <button onclick="send()">Send</button>
     </section>
 
