--- a/public/style.css
+++ b/public/style.css
@@ -10,13 +10,23 @@ aside {
 	color: #00008B
 }
 
+.link {
+	color: darkblue
+}
+
+.link:hover {
+	text-decoration: underline;
+	cursor: pointer;
+	color: blue
+}
+
 #help {
 	float: none;
 	color: darkblue;
 }
 
 #help h3:hover {
-	color: red;
+	color: blue;
 	text-decoration: underline;
 	cursor: pointer;
 }
