--- a/view/login.html
+++ b/view/login.html
@@ -5,6 +5,7 @@
   <title>Login to Chat</title>
   <script src="/script_login.js"></script>
   <link rel="stylesheet" href="/style_login.css">
+  <link href="/img/favicon.ico" rel="icon" type="image/x-icon"/>
 </head>
 <body onload="load()">
   <p>Chose your nickname (or login)</p>
@@ -18,6 +19,9 @@
   <section id="explainations">
     <p id="exp_pass" hidden>Click here if you have an account on nodechat.</p>
     <p id="exp_advanced" hidden>Advanced features include key generation, encrypted messages, and server commands.</p>
+  </section>
+  <section id="errors">
+    <p id="login_err"></p>
   </section>
 </body>
 </html>
