fix #28: send images

--- a/view/index.html
+++ b/view/index.html
@@ -31,7 +31,7 @@
         <b> [to <span id="dest" onclick="selectConnected('all')">all</span>] </b>
         <img id="send_secured" class="keyarea" hidden src="/img/unsecured.png">
 		<input id="checkbox_img" type="checkbox" onclick="toggleImg()"> img.
-		<button id="upload_img" onclick="alert('not yet')" hidden>Upload image</button>
+		<button id="upload_img" onclick="uploadImage()" hidden>Upload image</button>
       <button onclick="send()">Send</button>
     </section>
 
