fix #15: nickname is typing

--- a/view/index.html
+++ b/view/index.html
@@ -33,6 +33,7 @@
 		<input id="checkbox_img" type="checkbox" onclick="toggleImg()"> img.
 		<button id="upload_img" onclick="alert('not yet')" hidden>Upload image</button>
       <button onclick="send()">Send</button>
+	  <div id="typing"></div>
     </section>
 
     <aside id="connected">
