--- a/view/index.html
+++ b/view/index.html
@@ -12,7 +12,7 @@
     <link href="/img/favicon.ico" rel="icon" type="image/x-icon"/>
   </head>
   <body onfocus="focus()">
-    <img src="/img/online.png" id="afk" onclick="toggleAFK()" height="50" width="50"> <img src="/img/keyko.png" id="key" class="keyarea" hidden onclick="showkey()">
+    <img src="/img/online.png" id="afk" height="50" width="50"> <img src="/img/keyko.png" id="key" class="keyarea" hidden onclick="showkey()">
     <p>You are <b><span id="nickname">client-x</span></b>.</p>
     <p class="link" onclick="clickLogin()">Change nickname, login, or activate advanced features.</p>
     <p class="keyarea" hidden>
