--- a/view/login.html
+++ b/view/login.html
@@ -11,7 +11,7 @@
 </head>
 <body onload="load()">
   <header class="w3-container w3-teal w3-center">
-    <h2>Chose your nickname (or login)</h2>
+    <h2>Choose your nickname (or login)</h2>
   </header>
 <div class="w3-container w3-quarter"></div>
 <div class="w3-container w3-half w3-margin-top">
