center errors div

--- a/view/login.html
+++ b/view/login.html
@@ -28,7 +28,7 @@
     <p id="exp_pass" hidden>Click here if you have an account on nodechat.</p>
     <p id="exp_advanced" hidden>Advanced features include key generation, encrypted messages, and server commands.</p>
   </section>
-  <section id="errors">
+  <section id="errors" class="w3-container w3-margin-top w3-center">
     <p id="login_err"></p>
   </section>
 </body>
