--- a/view/index.html
+++ b/view/index.html
@@ -34,11 +34,11 @@
       <span id="wait_please" hidden>Request sent; please wait while your key is being generated...</span><span id="gen_error" hidden>An error occurred during key generation!</span>
     </p>
     
-    <aside id="connected" class="w3-card w3-margin-top w3-border">
+    <aside id="connected" class="w3-container w3-card w3-border">
 
     </aside>
 
-    <section id="chat_zone" class="w3-container w3-margin-top">
+    <section id="chat_zone" class="w3-container">
 
     </section>
     
