--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,3 @@
-aside {
-	float: right;
-	margin-top: 30px;
-	margin-right: 5px;
-}
-
 .toself {
 	color: gray
 }
@@ -13,7 +7,10 @@ aside {
 }
 
 #connected {
-	color: green
+	color: green;
+	position: fixed;
+	top: 45px;
+	right: 5px;
 }
 
 #connected li.afk {
@@ -32,7 +29,7 @@ aside {
 
 #chat_zone {
 	float:left;
-	margin-top: 25px;
+	margin-top: 30px;
 	margin-bottom: 75px;
 }
 
