--- a/view/index.html
+++ b/view/index.html
@@ -43,7 +43,7 @@
     </section>
     
     <footer id="chat_form" class="w3-bar w3-bottom w3-border w3-light-gray">
-      <input class="w3-bar-item w3-input" type="text" name="message" id="message" placeholder="Type your message here..." style="width: 100%" autofocus onkeydown="pressKey(event)" oninput="inputChange()" onfocus="inputChange()"/>
+      <input class="w3-bar-item w3-input" type="text" name="message" id="message" placeholder="Type your message here..." size="60" autofocus onkeydown="pressKey(event)" oninput="inputChange()" onfocus="inputChange()"/>
       <button class="w3-bar-item w3-button w3-teal w3-ripple w3-right" onclick="send()">Send</button>
       <button id="upload_img" class="w3-bar-item w3-button w3-teal w3-ripple w3-right" onclick="uploadImage()" hidden>Upload image</button>
       <div class="w3-bar-item w3-right"><input id="checkbox_img" type="checkbox" onclick="toggleImg()"> img.</div>
