--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,7 @@
 }
 
 #connected {
+	background-color: #f1f1f1;
 	color: green;
 	position: fixed;
 	top: 45px;
@@ -30,7 +31,7 @@
 #chat_zone {
 	float:left;
 	margin-top: 30px;
-	margin-bottom: 75px;
+	margin-bottom: 35px;
 }
 
 #chat_zone strong {
