group key operations under the key icon

--- a/view/index.html
+++ b/view/index.html
@@ -20,7 +20,7 @@
       <div class="w3-bar-item w3-right">You are <b><span id="nickname">client-x</span></b>.</div>
       <div class="w3-bar-item w3-right"><img src="/img/online.png" id="afk" height="20" width="20"></div>
 	  <div class="w3-dropdown-hover w3-right">
-        <div class="w3-bar-item w3-button"><img src="/img/keyko.png" id="key" class="keyarea" height="20" width="20" hidden onclick="showkey()"></div>
+        <div class="w3-bar-item"><img src="/img/keyko.png" id="key" class="keyarea" height="20" width="20" hidden onclick="showkey()"></div>
 		<div class="w3-dropdown-content w3-bar-block w3-card-4">
           <button id="genkey" class="w3-bar-item w3-button" onclick="genKey()">Generate key</button>
           <button class="w3-bar-item w3-button" onclick="genKeyNode()">Get key from local server</button>
