responsive for phone

--- a/view/index.html
+++ b/view/index.html
@@ -14,8 +14,8 @@
   </head>
   <body onfocus="focus()">
     <div class="w3-bar w3-top w3-border w3-light-gray">
-      <div class="w3-bar-item w3-black"><b>ChatNoir</b></div>
-      <div id="help" class="w3-bar-item w3-button w3-teal" onclick="help()">Need help?</div>
+      <div class="w3-bar-item w3-black w3-hide-small"><b>ChatNoir</b></div>
+      <div id="help" class="w3-bar-item w3-button w3-teal w3-hide-small" onclick="help()">Need help?</div>
       <button class="w3-bar-item w3-button w3-right w3-teal w3-ripple" onclick="clickLogin()">Logout</button>
       <div class="w3-bar-item w3-right">You are <b><span id="nickname">client-x</span></b>.</div>
       <div class="w3-bar-item w3-right"><img src="/img/online.png" id="afk" height="20" width="20"></div>
@@ -43,13 +43,13 @@
     
     <footer id="chat_form" class="w3-bar w3-bottom w3-border w3-light-gray">
       <input class="w3-bar-item w3-input" type="text" name="message" id="message" placeholder="Type your message here..." size="60" autofocus onkeydown="pressKey(event)" oninput="inputChange()" onfocus="inputChange()"/>
-      <button class="w3-bar-item w3-button w3-teal w3-ripple w3-right" onclick="send()">Send</button>
+      <button class="w3-bar-item w3-button w3-teal w3-ripple w3-right w3-hide-small" onclick="send()">Send</button>
       <button id="upload_img" class="w3-bar-item w3-button w3-teal w3-ripple w3-right" onclick="uploadImage()" hidden>Upload image</button>
-      <div class="w3-bar-item w3-right"><input id="checkbox_img" type="checkbox" onclick="toggleImg()"> img.</div>
-      <div class="w3-bar-item w3-right"><img id="send_secured" class="keyarea" height="20" width="20" hidden src="/img/unsecured.png"></div>
-      <div class="w3-bar-item w3-right"><b>[to <span id="dest" onclick="selectConnected('all')">all</span>]</b></div>
-      <button class="w3-bar-item w3-button w3-teal w3-ripple w3-right" onclick="$('#chat_zone').empty()">Clear messages</button>
-      <div class="w3-bar-item w3-right" id="typing"></div>
+      <div class="w3-bar-item w3-right w3-hide-small"><input id="checkbox_img" type="checkbox" onclick="toggleImg()"> img.</div>
+      <div class="w3-bar-item w3-right w3-hide-small"><img id="send_secured" class="keyarea" height="20" width="20" hidden src="/img/unsecured.png"></div>
+      <div class="w3-bar-item w3-right w3-hide-small"><b>[to <span id="dest" onclick="selectConnected('all')">all</span>]</b></div>
+      <button class="w3-bar-item w3-button w3-teal w3-ripple w3-right w3-hide-small" onclick="$('#chat_zone').empty()">Clear messages</button>
+      <div class="w3-bar-item w3-right w3-hide-small" id="typing"></div>
     </footer>
     
     <script src="/script.js"></script>
