--- a/view/index.html
+++ b/view/index.html
@@ -15,6 +15,7 @@
   </head>
   <body onfocus="focus()">
     <div class="w3-bar w3-top w3-border w3-light-gray">
+	  <!--<button class="w3-bar-item w3-button w3-teal w3-ripple w3-hide-medium w3-hide-large"><i class="fa fa-bars" aria-hidden="true"></i></button>-->
       <div class="w3-bar-item w3-black w3-hide-small"><b>ChatNoir</b></div>
       <div id="help" class="w3-bar-item w3-button w3-teal w3-hide-small" onclick="help()">Need help?</div>
       <button class="w3-bar-item w3-button w3-right w3-teal w3-ripple w3-hide-small" onclick="clickLogin()">Logout</button>
@@ -35,7 +36,7 @@
       <span id="wait_please" hidden>Request sent; please wait while your key is being generated...</span><span id="gen_error" hidden>An error occurred during key generation!</span>
     </p>
     
-    <aside id="connected" class="w3-container w3-card w3-border">
+    <aside id="connected" class="w3-container w3-card">
 
     </aside>
 
