--- a/view/index.html
+++ b/view/index.html
@@ -21,7 +21,7 @@
       <button class="w3-bar-item w3-button w3-right w3-teal w3-ripple w3-hide-small" onclick="clickLogin()">Logout</button>
       <button class="w3-bar-item w3-button w3-right w3-teal w3-ripple w3-hide-medium w3-hide-large" onclick="clickLogin()"><i class="fa fa-sign-out" aria-hidden="true"></i></button>
       <div class="w3-bar-item w3-right"><span class="w3-hide-small">You are </span><b><span id="nickname">client-x</span></b><span class="w3-hide-small">.</span></div>
-      <div class="w3-bar-item w3-right"><img src="/img/online.png" id="afk" height="20" width="20" onclick="toggleConnected()"></div>
+      <div class="w3-bar-item w3-right"><img src="/img/online.png" id="afk" height="20" width="20" onclick="$('#connected').toggle()"></div>
 	  <div class="w3-dropdown-hover w3-right">
         <div class="w3-bar-item"><img src="/img/keyko.png" id="key" class="keyarea" height="20" width="20" hidden onclick="showkey()"></div>
 		<div class="w3-dropdown-content w3-bar-block w3-card-4">
