--- a/view/index.html
+++ b/view/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>ChatNoir</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/style.css">
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="/lib/linkify.min.js"></script>
@@ -15,21 +15,23 @@
   </head>
   <body onfocus="focus()">
     <div class="w3-bar w3-top w3-border w3-light-gray">
-	  <!--<button class="w3-bar-item w3-button w3-teal w3-ripple w3-hide-medium w3-hide-large"><i class="fa fa-bars" aria-hidden="true"></i></button>-->
-      <div class="w3-bar-item w3-black w3-hide-small"><b>ChatNoir</b></div>
-      <div id="help" class="w3-bar-item w3-button w3-teal w3-hide-small" onclick="help()">Need help?</div>
-      <button class="w3-bar-item w3-button w3-right w3-teal w3-ripple w3-hide-small" onclick="clickLogin()">Logout</button>
-      <button class="w3-bar-item w3-button w3-right w3-teal w3-ripple w3-hide-medium w3-hide-large" onclick="clickLogin()"><i class="fa fa-sign-out" aria-hidden="true"></i></button>
-      <div class="w3-bar-item w3-right"><span class="w3-hide-small">You are </span><b><span id="nickname">client-x</span></b><span class="w3-hide-small">.</span></div>
-      <div class="w3-bar-item w3-right"><img src="/img/online.png" id="afk" height="20" width="20" onclick="$('#connected').toggle()"></div>
-	  <div class="w3-dropdown-hover w3-right">
-        <div class="w3-bar-item"><img src="/img/keyko.png" id="key" class="keyarea" height="20" width="20" hidden onclick="showkey()"></div>
+	  <!--
+	  <div class="w3-dropdown-hover">
+        <button class="w3-bar-item w3-button w3-teal w3-ripple w3-hide-medium w3-hide-large"><i class="fa fa-bars" aria-hidden="true"></i></button>
 		<div class="w3-dropdown-content w3-bar-block w3-card-4">
           <button id="genkey" class="w3-bar-item w3-button" onclick="genKey()">Generate key</button>
           <button class="w3-bar-item w3-button" onclick="genKeyNode()">Get key from local server</button>
           <button class="w3-bar-item w3-button" onclick="deleteKey()">Delete key</button> 
         </div>
       </div>
+	  -->
+      <div class="w3-bar-item w3-black w3-hide-small"><b>ChatNoir</b></div>
+      <div id="help" class="w3-bar-item w3-button w3-teal w3-hide-small" onclick="help()">Need help?</div>
+      <button class="w3-bar-item w3-button w3-right w3-teal w3-ripple w3-hide-small" onclick="clickLogin()">Logout</button>
+      <button class="w3-bar-item w3-button w3-right w3-teal w3-ripple w3-hide-medium w3-hide-large" onclick="clickLogin()"><i class="fa fa-sign-out" aria-hidden="true"></i></button>
+      <div class="w3-bar-item w3-right"><span class="w3-hide-small">You are </span><b><span id="nickname">client-x</span></b><span class="w3-hide-small">.</span></div>
+      <div class="w3-bar-item w3-right"><img src="/img/online.png" id="afk" height="20" width="20" onclick="$('#connected').toggle()"></div>
+	  <div class="w3-bar-item w3-right"><img src="/img/keyko.png" id="key" class="keyarea" height="20" width="20" hidden onclick="showkey()"></div>
     </div>
     
     <p class="keyarea" hidden>
