--- a/view/index.html
+++ b/view/index.html
@@ -14,31 +14,34 @@
     <link href="/img/favicon.ico" rel="icon" type="image/x-icon"/>
   </head>
   <body onfocus="focus()">
-    <div class="w3-bar w3-top w3-border w3-light-gray">
-	  <!--
-	  <div class="w3-dropdown-hover">
-        <button class="w3-bar-item w3-button w3-teal w3-ripple w3-hide-medium w3-hide-large"><i class="fa fa-bars" aria-hidden="true"></i></button>
-		<div class="w3-dropdown-content w3-bar-block w3-card-4">
-          <button id="genkey" class="w3-bar-item w3-button" onclick="genKey()">Generate key</button>
-          <button class="w3-bar-item w3-button" onclick="genKeyNode()">Get key from local server</button>
-          <button class="w3-bar-item w3-button" onclick="deleteKey()">Delete key</button> 
-        </div>
-      </div>
-	  -->
+    <div class="w3-bar w3-top w3-border w3-light-gray" style="overflow:visible;">
       <div class="w3-bar-item w3-black w3-hide-small"><b>ChatNoir</b></div>
       <div id="help" class="w3-bar-item w3-button w3-teal w3-hide-small" onclick="help()">Need help?</div>
       <button class="w3-bar-item w3-button w3-right w3-teal w3-ripple w3-hide-small" onclick="clickLogin()">Logout</button>
       <button class="w3-bar-item w3-button w3-right w3-teal w3-ripple w3-hide-medium w3-hide-large" onclick="clickLogin()"><i class="fa fa-sign-out" aria-hidden="true"></i></button>
       <div class="w3-bar-item w3-right"><span class="w3-hide-small">You are </span><b><span id="nickname">client-x</span></b><span class="w3-hide-small">.</span></div>
       <div class="w3-bar-item w3-right"><img src="/img/online.png" id="afk" height="20" width="20" onclick="$('#connected').toggle()"></div>
-	  <div class="w3-bar-item w3-right"><img src="/img/keyko.png" id="key" class="keyarea" height="20" width="20" hidden onclick="showkey()"></div>
+	  <div class="w3-dropdown-hover w3-right">
+	    <div class="w3-bar-item"><img src="/img/keyko.png" id="key" class="keyarea" height="20" width="20" hidden onclick="showkey()"></div>
+		<div class="w3-dropdown-content w3-bar-block w3-card-4">
+          <button id="genkey" class="w3-bar-item w3-button" onclick="genKey()">Generate key</button>
+          <button class="w3-bar-item w3-button" onclick="genKeyNode()">Get key from local server</button>
+          <button class="w3-bar-item w3-button" onclick="deleteKey()">Delete key</button> 
+        </div>
+      </div>
     </div>
     
-    <p class="keyarea" hidden>
-      <span id="wait_please" hidden>Request sent; please wait while your key is being generated...</span><span id="gen_error" hidden>An error occurred during key generation!</span>
-    </p>
+	<div id="wait_please" class="w3-modal">
+      <div class="w3-modal-content">
+        <div class="w3-container">
+          <span onclick="$('#wait_please').hide()" class="w3-button w3-display-topright">&times;</span>
+          <p><i class="fa fa-spinner w3-spin" aria-hidden="true"></i> Request sent; please wait while your key is being generated...</p>
+	      <p id="gen_error" hidden>An error occurred during key generation!</p>
+        </div>
+      </div>
+    </div>
     
-    <aside id="connected" class="w3-container w3-card">
+    <aside id="connected" class="w3-container w3-card w3-animate-zoom">
 
     </aside>
 
