connected users graphical

--- a/view/index.html
+++ b/view/index.html
@@ -41,7 +41,7 @@
       </div>
     </div>
     
-    <aside id="connected" class="w3-container w3-card w3-animate-zoom">
+    <aside id="connected" class="w3-animate-zoom">
 
     </aside>
 
