--- a/view/index.html
+++ b/view/index.html
@@ -15,6 +15,14 @@
   </head>
   <body onfocus="focus()">
     <div class="w3-bar w3-top w3-border w3-light-gray" style="overflow:visible;">
+	  <div class="w3-dropdown-hover">
+	    <button class="w3-bar-item w3-button w3-teal w3-ripple w3-hide-medium w3-hide-large"><i class="fa fa-bars" aria-hidden="true"></i></button>
+		<div class="w3-dropdown-content w3-bar-block w3-card-4 w3-light-gray" style="margin-top: 35px">
+		  <button class="w3-bar-item w3-button" onclick="uploadImage(true)">Upload image</button>
+          <div id="mobile_checkbox_img" class="w3-bar-item w3-button" onclick="sendImgMobile()">Send as image</div>
+          <button class="w3-bar-item w3-button" onclick="$('#chat_zone').empty()">Clear messages</button>
+        </div>
+      </div>
       <div class="w3-bar-item w3-black w3-hide-small"><b>ChatNoir</b></div>
       <div id="help" class="w3-bar-item w3-button w3-teal w3-hide-small" onclick="help()">Need help?</div>
       <button class="w3-bar-item w3-button w3-right w3-teal w3-ripple w3-hide-small" onclick="clickLogin()">Logout</button>
@@ -37,6 +45,17 @@
           <span onclick="$('#key_modal').hide()" class="w3-button w3-display-topright">&times;</span>
           <p id="wait_please"><i class="fa fa-spinner w3-spin" aria-hidden="true"></i> Request sent; please wait while your key is being generated...</p>
 	      <p id="gen_error" hidden><i class="fa fa-exclamation-circle" aria-hidden="true"></i> An error occurred during key generation!</p>
+        </div>
+      </div>
+    </div>
+	
+	<div id="upload_image_modal" class="w3-modal">
+      <div class="w3-modal-content">
+        <div class="w3-container">
+          <span onclick="$('#upload_image_modal').hide()" class="w3-button w3-text-teal w3-display-topright"><i class="fa fa-window-close" aria-hidden="true"></i></span>
+          <iframe id="upload_image_modal_iframe" src="">
+            <p>Your browser does not support iframes.</p>
+          </iframe>
         </div>
       </div>
     </div>
